# rubicante

./: Cargo.toml  LICENSE  README.md
calcabrina/: Cargo.toml
calcabrina/src/: character.rs  config.rs  input.rs  lib.rs  main.rs  map.rs  util.rs  world.rs
calcabrina/src/scenes/: field.rs  mod.rs  title.rs
calcabrina/src/scenes/field/: map.rs  mod.rs  sprite.rs
ff4/: Cargo.toml
ff4/src/: character.rs  graphics.rs  lib.rs  map.rs  misc.rs  rom.rs  rom_map.rs  title.rs
rubicante/: Cargo.toml
