[package]
name = "calcabrina"
version = "0.1.0"
authors = ["Jason Lynch <jason@calindora.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff4 = { path = "../ff4" }
ggez = "0.5.1"
ggez-goodies = "0.5.0"
image = "0.23.7"
